add updated index,html file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </h1>
                 <p>
                     As an undergraduate software engineer, I am dedicated and hardworking, with a strong foundation in software design and essential programming skills. 
-                    I am eager to support my team in achieving organizational objectives and am a reliable intern seeking valuable hands-on experience in software engineering and computing 
+                    I am eager to support my team in achieving organizational objectives and I am a reliable intern seeking valuable hands-on experience in software engineering and computing 
                     through internship opportunities.
                 </p>
 
@@ -208,7 +208,7 @@
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
-                Here is some of my work that I've done in various programming languages and using various tool.
+                Here are some of my works that I've done in various programming languages and using various tool.
             </p>
             <div class="work-container">
                 <div class="work-box">
