--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
-                Here are some of my works that I've done in various programming languages and using various tool.
+                Here are some of my works that I've rudone in various programming languages and using various tool.
             </p>
             <div class="work-container">
                 <div class="work-box">
@@ -245,6 +245,11 @@
                     <img src="img/work7.jpg" alt="Project Image">
                         <h3>GreenerLand Website</h3>
                         <a href="https://github.com/Chamodya23/GreenerLand_Web" target="_blank"><button>View on Github</button></a>
+                </div>
+                <div class="work-box">
+                    <img src="img/work8.jpg" alt="Project Image">
+                        <h3>Calculator</h3>
+                        <a href="https://github.com/Chamodya23/Calculator" target="_blank"><button>View on Github</button></a>
                 </div>
               </div>
                
