--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     Hello, I'm<br>
                     <span> Chamodya Sewwandi Gamage</span>
                     <br>
-                    <h2>A Front-end Developer | UI/UX Designer</h2>
+                    <h2>A  Web Developer |            UI/UX Designer | Qaulity Assurance Engineer </h2>
                 </h1>
                 <p>
                     As an undergraduate software engineer, I am dedicated and hardworking, with a strong foundation in software design and essential programming skills. 
