--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="work-box">
                     <img src="img/work4.jpg" alt="Project Image">
                         <h3>Restuarant WebSite</h3>
-                        <a href="https://github.com/Chamodya23/Restuarant-website" target="_blank"><button>View on Github</button></a>
+                        <a href="https://github.com/Chamodya23/Resturant-Website target=" _blank"><button>View on Github</button></a>
                 </div>
                 <div class="work-box">
                     <img src="img/work5.jpg" alt="Project Image">
