--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <br>
 
                     <div class="btn-con">
-                        <a href="img/pdf/Chamodya Sewwandi Gamage_CV.pdf" class="main-btn">
+                        <a href="img/pdf/Chamodya Gamage_Intern Application.pdf" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
