--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
                         <h3>Calculator</h3>
                         <a href="https://github.com/Chamodya23/Calculator" target="_blank"><button>View on Github</button></a>
                 </div>
+                <div class="work-box">
+                    <img src="img/work9.jpg" alt="Project Image">
+                        <h3>Music Player</h3>
+                        <a href="https://github.com/Chamodya23/Music-Player" target="_blank"><button>View on Github</button></a>
+                </div>
               </div>
                
             </div>
